# yolov8cpp

./: CMakeLists.txt  README.md  main.cpp
yolov8cpp/: yolov8.cpp
